--- a/_posts/2020-03-06-r-setup.md
+++ b/_posts/2020-03-06-r-setup.md
@@ -22,9 +22,8 @@ While `R` is the software we will be leveraging for our analysis, developers hav
 + Navigate to: https://cloud.r-project.org/
 + Select your OS
 
-![Download R](figs/download-R.png)
+insert image download r
 
----
 
 **2. Install `RStudio` on our local machine.**
 
@@ -33,9 +32,7 @@ While `R` is the software we will be leveraging for our analysis, developers hav
 + Navigate to: https://rstudio.com/products/rstudio/download/
 + Select your OS
 
-
-![Download RSudio](figs/download-RStudio.png)
-
+Insert images download Rstudio
 
 ---
 
