--- a/_posts/2020-03-06-rsetup.md
+++ b/_posts/2020-03-06-rsetup.md
@@ -1,5 +1,5 @@
 ---
-title:"1 - Setting Up R Environment"
+title:"Setting Up R Environment"
 Date: 2020-03-06
 tags: [R, Data Science, IDE]
 header:
