--- a/_posts/2020-03-07-RStudio.md
+++ b/_posts/2020-03-07-RStudio.md
@@ -4,5 +4,5 @@ Date: 2020-03-07
 tags: [R, Data Science, IDE]
 header:
     image:"/images/2020-03-06-r.jpg"
-excerpt: "Getting familliar with the RStudio Environment"
+excerpt: "Getting familiar with the RStudio Environment"
 ---
