--- a/_posts/2020-03-07-RStudio.md
+++ b/_posts/2020-03-07-RStudio.md
@@ -62,7 +62,7 @@ print("Hello World!")
 
 https://rstudio.com/resources/cheatsheets/
 
-![Sample of RStudio](/images/Getting to know RStudio/sample-rstudio-cheat-sheet.png)
+![Sample of RStudio](/images/Getting to know RStudio/sample-rstudio-cheat-sheet.pdf)
 
 ### Markdown Documents
 
