--- a/_posts/2020-03-07-RStudio.md
+++ b/_posts/2020-03-07-RStudio.md
@@ -60,9 +60,7 @@ print("Hello World!")
 
 `RStudio` is open-source and there are many indiviudals/organizations that contribute to its development to faciltiate work carried out in R.  A great form of documentation are **RStudio Cheat Sheets** which provide a brief overview of the most essential packages (we will discuss these laters), and features of various tools.  As you are getting familliar with this new environment I emplore your to explore their **RStudio IDE Cheat sheet** to get a better understanding of the IDE.
 
-https://rstudio.com/resources/cheatsheets/
-
-![Sample of RStudio](/images/Getting to know RStudio/sample-rstudio-cheat-sheet.PNG)
+[RStudio Cheat Sheet]("https://rstudio.com/resources/cheatsheets/")
 
 ### Markdown Documents
 
@@ -164,7 +162,7 @@ After the header, there is some standard text with one word coloured differently
 The final code chunk updates the chunk arguments to `echo  = FALSE` which tells the compiler to not include the code in the final document.  Note: the code will still be run and output in the compiled document, but the source code will not be provided.
 
 
-### Code Chunk Arguements
+### Code Chunk Arguments
 
 We have discussed a few different type of arguments we can pass through to code chunks, but I will introduce a few others that will be important as you go off to develop your own documents.
 
