--- a/_posts/2020-03-07-RStudio.md
+++ b/_posts/2020-03-07-RStudio.md
@@ -60,7 +60,7 @@ print("Hello World!")
 
 `RStudio` is open-source and there are many indiviudals/organizations that contribute to its development to faciltiate work carried out in R.  A great form of documentation are **RStudio Cheat Sheets** which provide a brief overview of the most essential packages (we will discuss these laters), and features of various tools.  As you are getting familliar with this new environment I emplore your to explore their **RStudio IDE Cheat sheet** to get a better understanding of the IDE.
 
-[RStudio Cheat Sheet]("https://rstudio.com/resources/cheatsheets/")
+[RStudio Cheat Sheet](https://rstudio.com/resources/cheatsheets/)
 
 ### Markdown Documents
 
