--- a/_posts/2020-03-07-RStudio.md
+++ b/_posts/2020-03-07-RStudio.md
@@ -5,6 +5,7 @@ tags: [R, Data Science, IDE]
 header:
     image:"/images/2020-03-06-r.jpg"
 excerpt: "Getting familiar with the RStudio Environment"
+link: "http://url-you-want-link"
 ---
 
 ### Introduction
