--- a/_posts/2020-03-07-RStudio.md
+++ b/_posts/2020-03-07-RStudio.md
@@ -58,7 +58,7 @@ print("Hello World!")
   The environment window shows any variables that have been declared.  More details will be provided in later documentation.
 
 
-`RStudio` is open-source and there are many indiviudals/organizations that contribute to its development to faciltiate work carried out in R.  A great form of documentation are **RStudio Cheat Sheets** which provide a brief overview of the most essential packages (we will discuss these laters), and features of various tools.  As you are getting familliar with this new environment I emplore your to explore their **RStudio IDE Cheat sheet** to get a better understanding of the IDE.
+`RStudio` is open-source and there are many individuals/organizations that contribute to its development to faciltiate work carried out in R.  A great form of documentation are **RStudio Cheat Sheets** which provide a brief overview of the most essential packages (we will discuss these laters), and features of various tools.  As you are getting familliar with this new environment I emplore your to explore their **RStudio IDE Cheat sheet** to get a better understanding of the IDE.
 
 [RStudio Cheat Sheet](https://rstudio.com/resources/cheatsheets/)
 
@@ -74,10 +74,10 @@ When I would create reports to summarize my analysis there were two distinct com
 
 1. Develop R Code
 
-2. Copy Output to Word Doc and add suuporting text.
+2. Copy Output to Word Doc and add supporting text.
 
 
-This approach is proned to errors and does not promote transparency between analysis and the final product.  In fact, under this approach, even if the source code was included in the final report, it is not in a form that could be easily re-run on a different machine to replicate results.  There is a clever workaround to this problem.  Academics in mathematical disciplines have long been able to leverage technologies to integreate text and calculation into one product.  This concept is not novel, but essential in developing reproducable reports.
+This approach is prone to errors and does not promote transparency between analysis and the final product.  In fact, under this approach, even if the source code was included in the final report, it is not in a form that could be easily re-run on a different machine to replicate results.  There is a clever workaround to this problem.  Academics in mathematical disciplines have long been able to leverage technologies to integreate text and calculation into one product.  This concept is not novel, but essential in developing reproducable reports.
 
 As we continue to develop our `R` skills we will leverage `Markdown` documents.  Markdown is a framework that allows us to supplement code text and plain-text-formatting sytnax to format the text and convert the product to many output types (e.g. PDF, HTML ect.).
 
@@ -97,7 +97,7 @@ Once you have created the document you will see something like this:
 
 This is the default template for a `R markdown` file and showcases some important features of the markdown file.
 
-1. <font color='orange'> Title and document formatting section</font> 
+1-- <font color='orange'> Title and document formatting section</font> 
 
 The first section of the markdown sections begins and ends with --- which denotes a section. This section is referred to as a text chunk i.e. there is no code.  Within the section there are 4 arguments which R knows control aspects of the document:
 
@@ -109,7 +109,7 @@ The first section of the markdown sections begins and ends with --- which denote
 
 > Output:  Output lets the document know what format the final product should be.  For most cases, it can be defined as **html_document** though for my purposes this document was formated as a **github_document** which renders nicely on Github and BitBucked (Will be discussed later).
 
-2. <font color='red'> Code chunk defining global parameters</font> 
+2-- <font color='red'> Code chunk defining global parameters</font> 
 
 The second section introduces users to a code chunk.  Code chunks are specified by the following syntax
 
@@ -151,13 +151,13 @@ The above code has three components:
 + **echo = TRUE** This is the argument passed to the previous function.  `echo` is a parameter of a code chunk which tells the compiler whether or not to show the code in the final document.  In this case all future code chunks will display the code in the document unless otherwise stated in the arguments.
 
 
-3. <font color='limegreen'> Combining text and code</font> 
+3 --  <font color='limegreen'> Combining text and code</font> 
 
 The third section has both a text and code component and begins with `## R Markdown`.  When you see # in text sections of `R markdown` documents it indicates that the following text is a header.  The more # (i.e. ##, ###, #### ect) tell the compiler what type of header.  The more #s the smaller the header. 
 
-After the header, there is some standard text with one word coloured differently than the rest.  When we are working within the `RStudio IDE` everytime a format is being applied to text we will see colours change to indicate where the change is occuring. In this case **Knit** is bolded.  To bold text we preceed the word with ** and stop bolding after the word(s) with `**.
+After the header, there is some standard text with one word coloured differently than the rest.  When we are working within the `RStudio IDE` every time a format is being applied to text we will see colours change to indicate where the change is occuring. In this case **Knit** is bolded.  To bold text we precede the word with ** and stop bolding after the word(s) with **.
 
-4. <font color='lightblue'> Combining text and code with parameter adjustments </font> 
+4 -- <font color='lightblue'> Combining text and code with parameter adjustments </font> 
 
 The final code chunk updates the chunk arguments to `echo  = FALSE` which tells the compiler to not include the code in the final document.  Note: the code will still be run and output in the compiled document, but the source code will not be provided.
 
@@ -168,10 +168,14 @@ We have discussed a few different type of arguments we can pass through to code 
 
 1. Eval
 
-While the `Echo` argument controls our ability to display or hide source code, `Eval` controls whether or not we evalute (run) the code as we compile our `Rmarkdown` documents.  The default argument is `Eval = True`, thus all code chucks will be evaluated unless otherwise specified.  
+While the `Echo` argument controls our ability to display or hide source code, `Eval` controls whether or not we evaluate (run) the code as we compile our `Rmarkdown` documents.  The default argument is `Eval = True`, thus all code chucks will be evaluated unless otherwise specified.  
 
-Why might we not want to run code when we compile the `Rmarkdown` document?  There are two cases where I tend to not evaluate code chunks in my documents.  The first case is when I provide code for demonstrative purposes only.  As you will see throughout these articles, I will provide sample code for you to try.  As we get into more advanced modelling techniques the computational requirements 
+Why might we not want to run code when we compile the `Rmarkdown` document?  An instance in which I do not evaluate my code is when I provide code for demonstrative purposes only; as you will see throughout these articles, I will provide sample code for you to try.  
 
+2. Warning
+
+In some cases, when code is run a warning message is produced.  A warning doesn't imply that something is wrong with the code.  In my experience, warnings are often relat
+ 
 ### Useful Formatting
 
 As you embark on your journey to understand `Rmarkdown` here is some syntax of useful formatting I use when creating `Rmarkdown` documents.
