--- a/_posts/2020-03-07-RStudio.md
+++ b/_posts/2020-03-07-RStudio.md
@@ -166,13 +166,13 @@ The final code chunk updates the chunk arguments to `echo  = FALSE` which tells 
 
 We have discussed a few different type of arguments we can pass through to code chunks, but I will introduce a few others that will be important as you go off to develop your own documents.
 
-1. Eval
+**Eval**
 
 While the `Echo` argument controls our ability to display or hide source code, `Eval` controls whether or not we evaluate (run) the code as we compile our `Rmarkdown` documents.  The default argument is `Eval = True`, thus all code chucks will be evaluated unless otherwise specified.  
 
 Why might we not want to run code when we compile the `Rmarkdown` document?  An instance in which I do not evaluate my code is when I provide code for demonstrative purposes only; as you will see throughout these articles, I will provide sample code for you to try.  
 
-2. Warning
+**Warning**
 
 In some cases, when code is run a warning message is produced.  A warning doesn't imply that something is wrong with the code.  In my experience, warnings are often relat
  
