--- a/_posts/2020-03-07-RStudio.md
+++ b/_posts/2020-03-07-RStudio.md
@@ -174,7 +174,8 @@ Why might we not want to run code when we compile the `Rmarkdown` document?  An 
 
 **Warning**
 
-In some cases, when code is run a warning message is produced.  A warning doesn't imply that something is wrong with the code.  In my experience, warnings are often relat
+In some cases, when code is run a warning message is produced.  A warning doesn't imply that something is wrong with the code.  In my experience, warnings are often related to redundancies regarding the naming of functions i.e. some packages have consistent naming for functions.  In this case a warning message will be output when the packages are loaded noting which function will be used unless the package is specified (e.g. package::function).  When you are compiling a final document, if you understand the implications of masked functions (if you call a function it will be evaluated from the unmasked package).
+
  
 ### Useful Formatting
 
